# sreaws

./: README.md  pyproject.toml
sreaws/: aws.py  ec2.py  errors.py
tests/: test_sreaws.py
